[tool.poetry]
name = "pythonproject"
version = "0.1.0"
description = ""
authors = ["Antony2500 <toxa241ff@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
flask = "^3.0.3"
python-dotenv = "^1.0.1"
flask-testing = "^0.8.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
